apps/n8n/n8n.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n
spec:
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: n8n-pvc
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:2.21.7
          ports:
            - name: http
              containerPort: 5678
          volumeMounts:
            - name: data
              mountPath: /home/node
          resources:
            requests:
              memory: "250Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "300m"
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            runAsUser: 1000
            runAsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  ports:
    - name: http
      port: 5678
      targetPort: http
  selector:
    app: n8n
