apps/n8n/funnel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: n8n
      port:
        number: 5678
  ingressClassName: tailscale
  tls:
    - hosts:
        - n8n
